--- a/src/main/java/com/proyecto/vista/VentanaGestorEstadoCuentas.form
+++ b/src/main/java/com/proyecto/vista/VentanaGestorEstadoCuentas.form
@@ -54,6 +54,8 @@
                                   <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
                                   <Component id="bancosBtn" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="32767" attributes="0"/>
+                                  <Component id="registrarSolicitudPagoBtn" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="facturasPendientesBtn" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="facturasPagadasBtn" min="-2" pref="200" max="-2" attributes="0"/>
@@ -106,6 +108,7 @@
                       <Component id="facturasPendientesBtn" alignment="3" min="-2" pref="43" max="-2" attributes="0"/>
                       <Component id="facturasPagadasBtn" alignment="3" min="-2" pref="43" max="-2" attributes="0"/>
                       <Component id="bancosBtn" alignment="3" min="-2" pref="43" max="-2" attributes="0"/>
+                      <Component id="registrarSolicitudPagoBtn" alignment="3" min="-2" pref="43" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
               </Group>
@@ -354,6 +357,27 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="filtroTodosBtnActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="registrarSolicitudPagoBtn">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="0" red="cc" type="rgb"/>
+            </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="18" style="0"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Registrar Solicitud Pago"/>
+            <Property name="borderPainted" type="boolean" value="false"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Default Cursor"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="registrarSolicitudPagoBtnActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
