--- a/src/main/java/com/proyecto/vista/VentanaRegistroSolicitudPago.form
+++ b/src/main/java/com/proyecto/vista/VentanaRegistroSolicitudPago.form
@@ -125,7 +125,7 @@
                                           <Component id="jLabel18" alignment="0" max="32767" attributes="0"/>
                                           <Component id="jLabel32" alignment="0" max="32767" attributes="0"/>
                                           <Component id="porChequeBtn" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="bancoCbox" alignment="0" pref="134" max="32767" attributes="0"/>
+                                          <Component id="bancosCbox" alignment="0" pref="134" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                                   <EmptySpace min="18" max="32767" attributes="0"/>
@@ -193,7 +193,7 @@
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="bancoCbox" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                              <Component id="bancosCbox" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                               <Component id="saldoActualBancoField" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                               <Component id="detalleCanjeField" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                               <Component id="categoriaProductoCBox" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
@@ -396,7 +396,7 @@
             <Property name="text" type="java.lang.String" value="Saldo Actual:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JComboBox" name="bancoCbox">
+        <Component class="javax.swing.JComboBox" name="bancosCbox">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
@@ -407,6 +407,9 @@
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bancosCboxActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
@@ -441,6 +444,9 @@
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="categoriaProductoCBoxActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
