--- a/src/main/java/com/proyecto/vista/VentanaGestorCuentasBancarias.form
+++ b/src/main/java/com/proyecto/vista/VentanaGestorCuentasBancarias.form
@@ -51,7 +51,6 @@
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace max="32767" attributes="0"/>
                                   <Component id="editarCuentaBtn" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="agregarCuentaBtn" min="-2" max="-2" attributes="0"/>
@@ -82,9 +81,9 @@
                   <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" pref="357" max="32767" attributes="0"/>
                   <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="editarCuentaBtn" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="agregarCuentaBtn" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="agregarCuentaBtn" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
               </Group>
